# dubbify

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: elevenlabs-convert-integration.md  initial-implementation.md
dubbify/: __init__.py  main.py  models.py
dubbify/core/: dubber.py  media_utils.py  transcriber.py
tests/: test_dubber.py  test_transcriber.py
