[project]
name = "dubbify"
version = "0.1.0"
description = "Create AI-generated dubbed audio tracks for media via CLI and SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Amr Osama" }
]
keywords = ["dubbing", "audio", "tts", "transcription", "cli", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.1",
  "srt>=3.5.3",
  "pydub>=0.25.1",
  "ffmpeg-python>=0.2.0",
  "elevenlabs>=1.3.1",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/thehorse2000/dubbify"
Repository = "https://github.com/thehorse2000/dubbify"

[project.scripts]
dubbify = "dubbify.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["dubbify*"]
exclude = ["data*", "tmp_dubbify_segments*"]

